# debuthon-mystarz

./: .gitignore  README.md
app/: package-lock.json  package.json  pnpm-lock.yaml  star-voting.tsx  tailwind.config.ts
app/app/: Providiers.tsx  auth-loading-context.tsx  contractMarketplaceConfig.js  contractVoteConfig.js  footer.tsx  funding-abi.json  layout.tsx  marketplaceContractConfig.js  page.tsx  wagmiClient.js
app/app/api/bridge/: route.ts
app/app/impact-badge/: page.tsx
app/app/impact-badge/[id]/: page.tsx
app/app/initiatives/[id]/: page.tsx
app/app/marketplace/: page.tsx
app/app/marketplace/[id]/: page-bc.tsx  page.tsx
app/app/reward-pass/: page.tsx
app/app/reward-pass/[id]/: page.tsx
app/app/vote/: page.tsx
app/components/: banner.tsx  bridge-modal.tsx  campaign-list.tsx  eyecatches.tsx  header.tsx  impact-badge-list.tsx  join-button.tsx  purchase-button.tsx  reward-pass-list.tsx  vote-button.tsx
app/lib/ui-shared/src/components/: Navigation.tsx
contracts/: README.md  hardhat.config.ts  package.json
contracts/contracts/: AchievementSBT.sol  Funding.sol  FundingBasedDAO.sol  MarketPlace.sol  MyStarzNFT.sol
contracts/ignition/deployments/chain-1440002/: deployed_addresses.json  journal.jsonl
contracts/ignition/deployments/chain-1440002/artifacts/: NFTModule#MyStarzNFT.dbg.json  (+1 more)
contracts/ignition/modules/: AchievementSBT.ts  Funding.ts  FundingBasedDAO.ts  MarketPlace.ts  MyStarzNFT.ts
server/: Cargo.toml  Makefile
server/src/: config.rs  main.rs  sqlite.rs
server/src/api/: mod.rs
server/src/funding/: ethers.rs  mod.rs
