[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0.97"
config = "0.15.11"
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
tower-http = "0.6.2"
tracing = "0.1.41"
axum = "0.8.1"
tokio-cron-scheduler = "0.13.0"
